--- a/RetirementSimulator.Core/RetirementSimulator.Core.csproj
+++ b/RetirementSimulator.Core/RetirementSimulator.Core.csproj
@@ -48,10 +48,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTOs\BudgetItemDTO.cs" />
+    <Compile Include="DTOs\SettingsDTO.cs" />
+    <Compile Include="Helpers\ApplicationHelper.cs" />
+    <Compile Include="Models\BudgetItem.cs" />
+    <Compile Include="Models\Settings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PersistenceService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
