--- a/RetirementSimulator.CoreTests/RetirementSimulator.CoreTests.csproj
+++ b/RetirementSimulator.CoreTests/RetirementSimulator.CoreTests.csproj
@@ -40,6 +40,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.Mvvm.v19.2, Version=19.2.7.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
@@ -54,6 +55,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Models\AssetItemTests.cs" />
     <Compile Include="Models\SimulationTests.cs" />
     <Compile Include="Models\BudgetItemTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
