--- a/RetirementSimulator/RetirementSimulator.csproj
+++ b/RetirementSimulator/RetirementSimulator.csproj
@@ -37,6 +37,9 @@
   <PropertyGroup>
     <ApplicationIcon>RetirementSimulator.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>RetirementSimulator.App</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonServiceLocator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
       <HintPath>..\packages\CommonServiceLocator.2.0.4\lib\net47\CommonServiceLocator.dll</HintPath>
